# cedas_hackathon_2025

./: .gitignore  EDA.ipynb  README.md  data_prep.ipynb  khalil_notebook.ipynb  model.py  notebook.ipynb  part1.ipynb  pyproject.toml  requirements.txt  train.py  utils.py  visual.ipynb  xgboost.ipynb
